fix processing service stats
